main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }
  required_version = ">= 1.2.0"

}

provider "aws" {
  region = "eu-north-1"
}

# Security Group
resource "aws_security_group" "web_sg" {
  name        = "web_server_sg"
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# SSH key 
resource "aws_key_pair" "deployer" {
  key_name   = "my-lab-key"
  public_key = "ssh-rsa MIIEowIBAAKCAQEA0ENH84TwJPq/g9Y2CxUfMJecO4vIU9g0m4a98MkANpovwt+z/OoR+NwI4IRt3s1rMZXgUHueiLc9SMnwsEZoaHkCVsoWEtqULjHqEpklhYdepxIl5Wv/+KT2F8/R0XjAqKc2ei+K0xyTg2su7uQtoFLgck3IU1NbomljZWk0tD6OALjbRMzp3Im+20Q4p9bDGDB14xEuGNS6qAo0D/IYSo0XD/Yx5HMR8JtatE2hktcGrdTVwzRYqwvavNgFrB8TZjXzmfzpqajVTYDOU0qwZzPSBW3G/0qjBvA35Eg1uRbuDYDwaQpp4+hJ7NfdsIS5n4RuuEscljZs+ucd2uSfwQIDAQABAoIBAAHXBlS1cPWyrWx5wQJ6Dkt8m2m/Q2bSOyzAlP8Cl5jj5dYf6dQrMTt0njN1mA7m27KVc2TiorTsgYMaHaFBDf0WTJn9sRI7kiGSWVIOvlEe [...]
}

# EC2 instance
resource "aws_instance" "app_server" {
  ami           = "ami-0fa91bc90632c73c9" 
  instance_type = "t3.micro"
  key_name      = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  # User Data
  user_data = <<-EOF
              #!/bin/bash
              apt-get update
              apt-get install -y docker.io
              systemctl start docker
              systemctl enable docker
              usermod -aG docker ubuntu

              docker run -d --name my-website -p 80:80 --restart unless-stopped hexpertkofeyok/lab1:latest

              # Watchtower
              docker run -d --name watchtower -v /var/run/docker.sock:/var/run/docker.sock --interval 30 containrrr/watchtower
              EOF

  tags = {
    Name = "TerraformLabServer"
  }
}

# IP
output "instance_public_ip" {
  description = "Public IP of the EC2 instance"
  value       = aws_instance.app_server.public_ip
}
